      and from normal to autosourced. (CNY-946)
    * Recipes will now automatically inherit the major_version macro, which is
      defined to be the first two decimal-seperated parts of the upstream
      version, combined with a decimal. For example, a version string of
      2.16.1.3 would have a major_version of 2.16. (CNY-629)


  o Bug Fixes:
    * A bug that caused group cook with a replace or remove with a
      flavor and no matching trove to emit a traceback instead of a
      warning has been fixed. (CNY-977)
    * A bug that caused an unhandled exception when two packages with
      the same name require a trove that was being erased has been
      fixed.

Changes in 1.0.35:
  o Bug Fixes:
    * The fix for CNY-926, which allows a ShimNetClient to create
      changes directly from an in-process Conary Repository, did not
      properly merge changesets when multiple servers were involved.
    * The r.setByDefault() method in group recipes was broken in
      1.0.34.  It would cause a traceback.  This has been fixed.

Changes in 1.0.34:
  o Client Changes:
    * You can now delete troves, update from changeset files, and
      update with a full version specified without an installLabelPath
      set. (CNY-281)
    * "conary rm" has been added as an alias for the "conary remove"
      command. (CNY-952)
    * Conary now produces an error message when an invalid context is
      specified. (CNY-890)
    * User settings in a context will override but not remove user
      settings from the main conary configuration file. (CNY-972)

  o Build (cvc) Changes:
    * "cvc cook --prep" now warns about missing dependencies instead
      of raising an error.  "cvc cook --download" does not warn or
      error. (CNY-787)
    * In a group recipe, if you use r.remove() to remove a component
      from a package in a group (which marks the component
      byDefault=False), and the package no longer contains any